2000-08-30	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.in: Add RTEMS_PROG_CC_FOR_TARGET, RTEMS_CANONICAL_TOOLS

2000-08-11  Charles-Antoine Gauthier  <charles.gauthier@nrc.ca>

	* README:
	* console/console.c:
	* include/bsp.h:
	* network/network.c:
	* startup/bspstart.c:
	Add support for configuration parameters in NVRAM

2000-08-11  Charles-Antoine Gauthier  <charles.gauthier@nrc.ca>

	* console/console.c: Fix polled input.

2000-08-10	Charles-Antoine Gauthier  <charles.gauthier@nrc.ca>

	* README: Updated.
	* console/console.c: Addition of support for shared printk and
	no termios.
	* include/bsp.h: Addition of second parameter to
	rtems_enet_driver_attach. Removed prototypes for printk and
	BSP_output_string.
	* network/network.c(rtems_enet_driver_attach): Addition of second
	parameter to function.

2000-08-10	Joel Sherrill <joel@OARcorp.com>

	* ChangeLog: New file.