@@ -1,3 +1,8 @@
+2000-09-04	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* console/Makefile.am, network/Makefile.am, startup/Makefile.am,
+	wrapup/Makefile.am: Include compile.am
+
 2000-08-30	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
 	* configure.in: Add RTEMS_PROG_CC_FOR_TARGET, RTEMS_CANONICAL_TOOLS
